tests/baselines/reference/numericIndexerConstraint2.errors.txt
tests/cases/compiler/numericIndexerConstraint2.ts(4,1): error TS2322: Type '{ one: number; }' is not assignable to type '{ [index: string]: Foo; }'.
  Property 'one' in type '{ one: number; }' is not assignable to type 'Foo'


==== tests/cases/compiler/numericIndexerConstraint2.ts (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: Foo; };
    var a: { one: number; };
    x = a;
    ~
!!! error TS2322: Type '{ one: number; }' is not assignable to type '{ [index: string]: Foo; }'.
!!! error TS2322:   Property 'one' in type '{ one: number; }' is not assignable to type 'Foo'